
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef scalar_t__ mach_vm_address_t ;
typedef scalar_t__ kern_return_t ;


 int ERROR (char*,scalar_t__,int ) ;
 scalar_t__ KERN_SUCCESS ;
 int VM_FLAGS_ANYWHERE ;
 int VM_FLAGS_FIXED ;
 int mach_error_string (scalar_t__) ;
 int mach_task_self () ;
 scalar_t__ mach_vm_allocate (int ,scalar_t__*,size_t,int) ;

__attribute__((used)) static bool allocate_map_address(void **map_address, size_t map_size) {
 mach_vm_address_t address = (mach_vm_address_t) *map_address;
 bool get_address = (address == 0);
 int flags = (get_address ? VM_FLAGS_ANYWHERE : VM_FLAGS_FIXED);
 kern_return_t kr = mach_vm_allocate(mach_task_self(), &address, map_size, flags);
 if (kr != KERN_SUCCESS) {
  ERROR("Could not allocate virtual memory: mach_vm_allocate %d: %s",
    kr, mach_error_string(kr));
  return 0;
 }
 if (get_address) {
  *map_address = (void *)address;
 }
 return 1;
}
